--- a/AyanixAudit/AyanixAudit.csproj
+++ b/AyanixAudit/AyanixAudit.csproj
@@ -68,7 +68,8 @@
     </Compile>
     <Compile Include="Globals\Get_General.cs" />
     <Compile Include="Globals\Helper.cs" />
-    <Compile Include="Models\PCInfo.cs" />
+    <Compile Include="Globals\SQL.cs" />
+    <Compile Include="Models\PC_Info.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="frmMain.resx">
