--- a/AyanixAudit/NPCAudit.csproj
+++ b/AyanixAudit/NPCAudit.csproj
@@ -7,14 +7,14 @@
     <ProjectGuid>{A132584F-29EE-4D44-B52C-E1BDB822FDF5}</ProjectGuid>
     <OutputType>WinExe</OutputType>
     <RootNamespace>NPCAudit</RootNamespace>
-    <AssemblyName>AyanixAudit</AssemblyName>
+    <AssemblyName>NPCAudit</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
     <IsWebBootstrapper>false</IsWebBootstrapper>
-    <PublishUrl>publish\</PublishUrl>
+    <PublishUrl>\\mars\Installers\APPS\NPCAudit\</PublishUrl>
     <Install>true</Install>
-    <InstallFrom>Disk</InstallFrom>
+    <InstallFrom>Unc</InstallFrom>
     <UpdateEnabled>false</UpdateEnabled>
     <UpdateMode>Foreground</UpdateMode>
     <UpdateInterval>7</UpdateInterval>
@@ -22,6 +22,8 @@
     <UpdatePeriodically>false</UpdatePeriodically>
     <UpdateRequired>false</UpdateRequired>
     <MapFileExtensions>true</MapFileExtensions>
+    <CreateWebPageOnPublish>true</CreateWebPageOnPublish>
+    <WebPage>publish.htm</WebPage>
     <ApplicationRevision>0</ApplicationRevision>
     <ApplicationVersion>1.0.0.%2a</ApplicationVersion>
     <UseApplicationTrust>false</UseApplicationTrust>
